Occupants on rooms are visible with mouse over instead of click. Related to issue 228
git-svn-id: https://emite.googlecode.com/svn/trunk/hablar@1420 87f8d446-a148-0410-9e96-a52f46714620

--- a/war/Hablar.css
+++ b/war/Hablar.css
@@ -483,6 +483,7 @@ div.hablar-SearchResultItemWidget:hover {
     width: 100%;
     overflow: hidden;
     margin: 2px 5px;
+    cursor: default;
 }
 
 .hablar-OccupantWidget .icon {
